--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@
 # automatically during redeployments and may negatively impact
 # the cluster.
 image: dezota/dremio-oss-with-ext
-imageTag: 20.1.0-6
+imageTag: 20.1.0-7
 
 # Annotations, labels, node selectors, and tolerations
 #
@@ -32,8 +32,8 @@ coordinator:
   # CPU & Memory
   # Memory allocated to each coordinator, expressed in MB.
   # CPU allocated to each coordinator, expressed in CPU cores.
-  cpu: 4
-  memory: 4096
+  cpu: 8
+  memory: 16384
 
   # This count is used for slave coordinators only.
   # The total number of coordinators will always be count + 1.
@@ -123,13 +123,13 @@ executor:
   # Memory allocated to each executor, expressed in MB.
   # CPU allocated to each executor, expressed in CPU cores.
   cpu: 4
-  memory: 4096
+  memory: 12288
   
   # Engines
   # Engine names be 47 characters or less and be lowercase alphanumber characters or '-'.
   # Note: The number of executor pods will be the length of the array below * count.
   engines: ["default"]
-  count: 5
+  count: 4
 
   # Executor volume size.
   volumeSize: 128Gi
@@ -336,15 +336,15 @@ distStorage:
   #       Dremio does not support using an K8s service account based IAM role.
   # credentials: If using accessKeySecret authentication, uncomment the credentials section below.
   aws:
-    bucketName: "dezota-dremio"
+    bucketName: "dremio"
     path: "/"
     authentication: "accessKeySecret"
     # If using accessKeySecret for authentication against S3, uncomment the lines below and use the values
     # to configure the appropriate credentials.
     #
     credentials:
-      accessKey: "wauolLvmZL1KkskT"
-      secret: "JYnQ6VWYSQvzF1JWG39Vl4BZNxBbO1Hg"
+      accessKey: "ZgZiWUfuxnqz1e3r"
+      secret: "Nm8W6Ld6OvnAZD05jgdsK9ek0uIpIIxS"
     #
     # If using awsProfile for authentication against S3, uncomment the lines below and use the values
     # to choose the appropriate profile.
