--- a/values.yaml
+++ b/values.yaml
@@ -7,8 +7,8 @@
 # Using latest will cause Dremio to potentially upgrade versions
 # automatically during redeployments and may negatively impact
 # the cluster.
-image: dezota/dremio-oss-with-ext
-imageTag: 20.1.0-7
+image: dezota/dremio-oss-with-ext-thin
+imageTag: 20.1.0-10
 
 # Annotations, labels, node selectors, and tolerations
 #
@@ -32,8 +32,8 @@ coordinator:
   # CPU & Memory
   # Memory allocated to each coordinator, expressed in MB.
   # CPU allocated to each coordinator, expressed in CPU cores.
-  cpu: 8
-  memory: 16384
+  cpu: 4
+  memory: 12288
 
   # This count is used for slave coordinators only.
   # The total number of coordinators will always be count + 1.
@@ -286,7 +286,7 @@ distStorage:
   # azure: ADLS Gen 1, additional parameters required, see "azure" section.
   # azureStorage: Azure Storage Gen2, additional paramters required, see "azureStorage" section.
   # gcp: Google Cloud Storage, additional parameters required, see "gcp" section.
-  type: "aws"
+  type: "local"
 
   # Google Cloud Storage
   #
@@ -336,15 +336,15 @@ distStorage:
   #       Dremio does not support using an K8s service account based IAM role.
   # credentials: If using accessKeySecret authentication, uncomment the credentials section below.
   aws:
-    bucketName: "dremio"
+    bucketName: "dremio-dist-storage"
     path: "/"
     authentication: "accessKeySecret"
     # If using accessKeySecret for authentication against S3, uncomment the lines below and use the values
     # to configure the appropriate credentials.
     #
     credentials:
-      accessKey: "ZgZiWUfuxnqz1e3r"
-      secret: "Nm8W6Ld6OvnAZD05jgdsK9ek0uIpIIxS"
+      accessKey: "STYseJTiT4X8uRdB"
+      secret: "YxE0pcvCA3QYXCfzRqohBupkT3QdM4r8"
     #
     # If using awsProfile for authentication against S3, uncomment the lines below and use the values
     # to choose the appropriate profile.
